--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,22 @@
 <resources>
-    <string name="app_name">Sportetu</string>
+    <string name="app_name">SportEtu</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="channel_name">notification</string>
+    <string name="channel_description">description projet</string>
 
+    <string-array name="Listsport">
+        <item>musculation</item>
+        <item>boxe</item>
+        <item>judo</item>
+        <item>natation</item>
+        <item>athlétisme</item>
+        <item>cyclisme</item>
+        <item>football</item>
+        <item>basketball</item>
+        <item>badminton</item>
+        <item>handball</item>
+        <item>rugby</item>
+        <item>baseball</item>
+    </string-array>
 </resources>
